--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ once_cell = "1.18"
 rayon = "1.8"
 regex = "1.10"
 winapi = { version = "0.3", features = ["winuser", "windef"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dirs = "5.0"
