--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ winapi = { version = "0.3", features = ["winuser", "windef"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "5.0"
+chrono = "0.4"
