--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ winapi = { version = "0.3", features = ["winuser", "windef"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "5.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+plotters = "0.3"
+url = "2.5"
